# task

./: CMakeLists.txt  README.md  builds  client.cpp  client_functions.cpp  client_functions.h  common.cpp  common.h  file.txt  server.cpp  server_functions.cpp  server_functions.h  solve  task  test.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h  client.cpp  client_functions.cpp  client_functions.h  main.cpp
src/common/: common.cpp  common.h
src/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  server.cpp  server_functions.cpp  server_functions.h
